# Pose-Graph-SLAM

./: CMakeLists.txt  README.md
Codes/: 2D_Graph_SLAM.py  3D_Graph_SLAM.py  gn2d_py.g2o  gn3d.g2o  isam2d_py.g2o  isam3d.g2o
Codes/Alternate Solution/: g2o_handler.py  main.py
data/: garage_dataset.mat  input_INTEL_g2o_edges.txt  input_INTEL_g2o_poses.txt  intel_dataset.mat  parking-garage_g2o_edges.txt  parking-garage_g2o_poses.txt
include/: g2o_handler.hpp
src/: main.cpp
